--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -53,6 +53,8 @@
   "EXIT_SUBTITLE": "آیا میخواهید از هارمونوید خارج شوید؟",
   "EXIT_TITLE": "خارج شدن",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "وضعیت اتصال خود را بررسی کنید.",
   "KNOW_MORE": "بیشتر بدانید...",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "حداقل یک پوشه باید در کالکشن شما باشد.",
