--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -53,6 +53,8 @@
   "EXIT_SUBTITLE": "Te hiala amin'ny Harmonoid ve ianao?",
   "EXIT_TITLE": "Miala",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
   "INTERNET_ERROR": "Hamarino ny fifandraisana Internet anao.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
