--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -39,13 +39,13 @@
   "COMING_UP": "Chegando",
   "CREATE": "Criar",
   "CREATE_NEW_PLAYLIST": "CRIAR NOVA PLAYLIST",
-  "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova lista de reprodução para adicionar sua música",
+  "CREATE_PLAYLIST_SUBHEADER": "Crie uma nova playlist para adicionar sua música",
   "DATE_ADDED": "Data adicionada",
   "DELETE": "Deletar",
   "DELETE_TRACK": "Deletar música",
   "DESCENDING": "Descendente",
   "DISCORD": "SERVIDOR DO DISCORD",
-  "DISCOVERING_FILES": "Discovering files...",
+  "DISCOVERING_FILES": "Descobrindo arquivos...",
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "ENABLE_125_SCALING": "Ativar escala de 125%.",
   "ENABLE_ACRYLIC_BLUR": "Ativar desfoque acrílico do Windows.",
@@ -53,8 +53,8 @@
   "EXIT_SUBTITLE": "Você quer nos deixar?",
   "EXIT_TITLE": "Sair",
   "GO_TO_SETTINGS": "VÁ PARA AS CONFIGURAÇÕES",
-  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
-  "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
+  "INDEXING_ALREADY_GOING_ON_SUBTITLE": "Uma operação relacionada à indexação já está em andamento. Por favor, aguarde.",
+  "INDEXING_ALREADY_GOING_ON_TITLE": "Aguarde",
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
   "KNOW_MORE": "SABER MAIS",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Pelo menos uma pasta precisa permanecer em sua coleção.",
@@ -63,7 +63,7 @@
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MENU": "Menu",
-  "MUTE": "Mute",
+  "MUTE": "Mudo",
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
   "NEXT": "Próxima",
   "NO": "NÃO",
@@ -78,7 +78,7 @@
   "NO_DOWNLOAD_UPDATE": "Seu aplicativo já está atualizado",
   "NO_INTERNET_SUBTITLE": "Verifique sua conexão.",
   "NO_INTERNET_TITLE": "Sem internet",
-  "NO_PLAYLISTS_FOUND": "Nenhuma lista de reprodução encontrada.\nCrie alguns para vê-los lá.",
+  "NO_PLAYLISTS_FOUND": "Nenhuma playlist encontrada.\nCrie alguns para vê-los lá.",
   "N_TRACKS": "N faixas",
   "OK": "OK",
   "OPTIONS": "Opções",
@@ -88,10 +88,10 @@
   "PLAYLIST": "Playlist",
   "PLAYLISTS_CREATE": "Criar uma nova lista de reprodução",
   "PLAYLISTS_SUBHEADER": "Listas de reprodução disponíveis no seu dispositivo",
-  "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova lista de reprodução",
-  "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Lista de reprodução",
+  "PLAYLISTS_TEXT_FIELD_HINT": "Dê um nome para sua nova playlist",
+  "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma lista de reprodução para adicionar essa música",
-  "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à lista de reprodução",
+  "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
   "PLAY_NOW": "Reproduzir agora",
   "PREVIOUS": "Anterior",
@@ -99,7 +99,7 @@
   "REFRESH": "ATUALIZAR",
   "REINDEX": "Reindexar",
   "REMOVE": "REMOVER",
-  "REMOVE_FROM_PLAYLIST": "Remover da lista de reprodução",
+  "REMOVE_FROM_PLAYLIST": "Remover da playlist",
   "REPEAT": "Repitir",
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
@@ -147,10 +147,10 @@
   "SHOW_ALBUM": "Mostrar album",
   "SHOW_NOW_PLAYING_AFTER_PLAYING": "Saltar automaticamente para \"Agora tocando\" tela depois de reproduzir uma faixa",
   "SHOW_TRACK_PROGRESS_ON_TASKBAR": "Mostrar o progresso da trilha na barra de tarefas",
-  "SHUFFLE": "Shuffle",
+  "SHUFFLE": "Embaralhar",
   "SORT": "Organizar",
   "SORT_BY": "Ordenar Por",
-  "SPEED": "Speed",
+  "SPEED": "Velocidade",
   "STARTING_PLAYBACK": "Iniciando a reprodução",
   "SWITCH_THEME": "Trocar tema",
   "THEME_MODE_DARK": "Escuro",
@@ -160,7 +160,7 @@
   "TRACKS_FROM_ARTIST": "Faixas deste artista.",
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
-  "UNMUTE": "Unmute",
+  "UNMUTE": "Desativar Mudo",
   "WARNING": "Aviso",
   "YEAR": "Ano",
   "YES": "SIM",
