🌐 Add new strings

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -11,6 +11,7 @@
   "ARTIST_SINGLE": "Sənətçi",
   "ASCENDING": "Artan",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Albom bitdikdən sonra avtomatik olaraq indi çalınanlar kolleksiyasına digər mahnıları əlavə et",
+  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "A_TO_Z": "A'dan Z'yə",
   "BUFFERING": "Yüklənir",
   "CANCEL": "Ləğv et",
@@ -52,6 +53,8 @@
   "EXIT_NOW_PLAYING": "Çıx, hazırda oynatılır",
   "EXIT_SUBTITLE": "Harmonoid'dən çıxmaq istədiyinə əminsənmi?",
   "EXIT_TITLE": "Çıx",
+  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "Tənzimləmələrə get",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
