--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -11,6 +11,7 @@
   "ARTIST_SINGLE": "هنرمند",
   "ASCENDING": "صعودی",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "اضافه کردن بقیهٔ آهنگ‌ها از مجموعه به پخش وقتی آلبوم کامل شد",
+  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "A_TO_Z": "A تا Z",
   "BUFFERING": "بافرینگ...",
   "CANCEL": "لغو",
@@ -52,6 +53,8 @@
   "EXIT_NOW_PLAYING": "خروج از پخش آهنگ",
   "EXIT_SUBTITLE": "آیا میخواهید از هارمونوید خارج شوید؟",
   "EXIT_TITLE": "خارج شدن",
+  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "رفتن به تنظیمات",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
