--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -11,6 +11,7 @@
   "ARTIST_SINGLE": "アーティスト",
   "ASCENDING": "昇順",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "アルバムの完了後、コレクションから他の曲を自動的に再生中に追加する",
+  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
@@ -52,6 +53,8 @@
   "EXIT_NOW_PLAYING": "再生中を閉じる",
   "EXIT_SUBTITLE": "アプリを終了しますか？",
   "EXIT_TITLE": "終了",
+  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "設定に移動する",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
