--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -11,6 +11,7 @@
   "ARTIST_SINGLE": "Ustvarjalec",
   "ASCENDING": "Po abecedi naprej",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "A_TO_Z": "Od A do Z",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
@@ -52,6 +53,8 @@
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Ali res hočeš zapreti aplikacijo?",
   "EXIT_TITLE": "Izhod",
+  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "POJDI V NASTAVITVE",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
