--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -11,6 +11,7 @@
   "ARTIST_SINGLE": "Artist",
   "ASCENDING": "Ascending",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Automatically add other songs from collection to now playing after album completion",
+  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
@@ -52,6 +53,8 @@
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Do you want to exit Harmonoid?",
   "EXIT_TITLE": "Exit",
+  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "GO TO SETTINGS",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
