--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -11,6 +11,7 @@
   "ARTIST_SINGLE": "Sanatçı",
   "ASCENDING": "Artan",
   "AUTOMATICALLY_ADD_OTHER_SONGS_TO_NOW_PLAYING": "Albüm bittikten sonra otomatik olarak koleksiyondan diğer müzikleri şimdi oynatılıyor'a ekle",
+  "AUTO_REFRESH_SETTING": "Automatically check for new files on fresh start",
   "A_TO_Z": "A'dan Z'ye",
   "BUFFERING": "Yükleniyor",
   "CANCEL": "İPTAL",
@@ -52,6 +53,8 @@
   "EXIT_NOW_PLAYING": "Exit now playing",
   "EXIT_SUBTITLE": "Harmonoid'den çıkmak istediğine emin misin?",
   "EXIT_TITLE": "Çık",
+  "EXPERIMENTAL": "Experimental",
+  "EXPERIMENTAL_SUBTITLE": "These settings are not marked as stable yet.",
   "GO_TO_SETTINGS": "AYARLARA GİT",
   "INDEXING_ALREADY_GOING_ON_SUBTITLE": "An indexing related operating is already going on. Please wait.",
   "INDEXING_ALREADY_GOING_ON_TITLE": "Wait",
