--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Oynatma sırası adı",
   "PLAYLIST_ADD_DIALOG_BODY": "Bu musiqini əlavə etmək üçün hər hansı bir oynatma sırasını seç",
   "PLAYLIST_ADD_DIALOG_TITLE": "Oynatma sırasına əlavə et",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Sıradakı musiqilər",
   "PLAY_NOW": "İndi oynat",
   "PREVIOUS": "Öncəki",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Musiqi",
   "TRANSFERS": "Transferlər",
   "UNMUTE": "SƏSSİZDƏN ÇIXAR",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "BİLDİRİŞ",
   "YEAR": "İL",
   "YES": "BƏLİ",
