--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
   "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
   "PLAYLIST_ADD_DIALOG_TITLE": "Add to playlist",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Here are the tracks in this playlist",
   "PLAY_NOW": "Play now",
   "PREVIOUS": "Previous",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "Transfers",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
   "YEAR": "Year",
   "YES": "JA",
