--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "نام لیست پخش",
   "PLAYLIST_ADD_DIALOG_BODY": "لیست پخشی را انتخاب کنید تا موزیک شما در آن اضافه شود",
   "PLAYLIST_ADD_DIALOG_TITLE": "اضافه کردن به لیست پخش",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "اینجا موسیقی‌های لیست پخش را مشاهده می‌کنید.",
   "PLAY_NOW": "شروع",
   "PREVIOUS": "قبلی",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "موسیقی",
   "TRANSFERS": "انتقالات",
   "UNMUTE": "با صدا",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "هشدار",
   "YEAR": "سال",
   "YES": "بله",
