--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "नाम",
   "PLAYLIST_ADD_DIALOG_BODY": "प्लेलिस्ट चुनें",
   "PLAYLIST_ADD_DIALOG_TITLE": "प्लेलिस्ट में जोड़े",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "इस प्लेलिस्ट के गाने",
   "PLAY_NOW": "अभी गाना बजाएं",
   "PREVIOUS": "Previous",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Track",
   "TRANSFERS": "ट्रांसफर्स",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "चेतावनी",
   "YEAR": "Year",
   "YES": "हाँ",
