--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Lejátszási lista neve",
   "PLAYLIST_ADD_DIALOG_BODY": "Melyik listához akarod hozzáadni?",
   "PLAYLIST_ADD_DIALOG_TITLE": "Hozzáadás lejátszási listához",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "A lejátszási lista számai",
   "PLAY_NOW": "Lejátszás most",
   "PREVIOUS": "Previous",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Szám",
   "TRANSFERS": "Átvitelek",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Warning",
   "YEAR": "Year",
   "YES": "IGEN",
