--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "プレイリスト名",
   "PLAYLIST_ADD_DIALOG_BODY": "このトラックを追加するプレイリストを選択してください",
   "PLAYLIST_ADD_DIALOG_TITLE": "プレイリストに追加",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "このプレイリストには以下のトラックがあります",
   "PLAY_NOW": "今すぐ再生",
   "PREVIOUS": "前へ",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "トラック",
   "TRANSFERS": "転送",
   "UNMUTE": "ミュート解除",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "注意",
   "YEAR": "年",
   "YES": "はい",
