--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Anaran'ilay filaharan-kira",
   "PLAYLIST_ADD_DIALOG_BODY": "Misafidiana filaharan-kira ampidirana ity mozika ity",
   "PLAYLIST_ADD_DIALOG_TITLE": "Ampio amin'ny filaharan-kira",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Ireto ny hira avy amin'ity filaharan-kira ity",
   "PLAY_NOW": "Vakio izao",
   "PREVIOUS": "Previous",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Hira",
   "TRANSFERS": "Famindrana",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Tandremo",
   "YEAR": "Year",
   "YES": "ENY",
