--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Naam afspeellijst",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecteer een afspeellijst en voeg dit nummer toe",
   "PLAYLIST_ADD_DIALOG_TITLE": "Toevoegen aan afspeellijst",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Hier zijn de nummers in deze afspeellijst",
   "PLAY_NOW": "Nu afspelen",
   "PREVIOUS": "Previous",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Nummer",
   "TRANSFERS": "Overdrachten",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Waarschuwing",
   "YEAR": "Year",
   "YES": "JA",
