--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nome da Playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Selecione uma lista de reprodução para adicionar essa música",
   "PLAYLIST_ADD_DIALOG_TITLE": "Adicionar à Playlist",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Aqui estão algumas músicas nessa lista de reprodução",
   "PLAY_NOW": "Reproduzir agora",
   "PREVIOUS": "Anterior",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Faixas",
   "TRANSFERS": "Transferências",
   "UNMUTE": "Desativar Mudo",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Aviso",
   "YEAR": "Ano",
   "YES": "SIM",
