--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Название",
   "PLAYLIST_ADD_DIALOG_BODY": "Выберите плейлист",
   "PLAYLIST_ADD_DIALOG_TITLE": "Добавить в плейлист",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Треки в плейлисте",
   "PLAY_NOW": "Проиграть",
   "PREVIOUS": "Предыдущие",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Трек",
   "TRANSFERS": "ПЕРЕДАЧИ",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Предупреждение",
   "YEAR": "Год",
   "YES": "ДА",
