--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Ime seznama predvajanja",
   "PLAYLIST_ADD_DIALOG_BODY": "Izberi pesem za seznam predvajanja",
   "PLAYLIST_ADD_DIALOG_TITLE": "Dodaj na seznam predvajanja",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Tukaj so pesmi iz seznama predvajanja",
   "PLAY_NOW": "Predvajaj zdaj",
   "PREVIOUS": "Prejšnja",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Pesem",
   "TRANSFERS": "Prenosi",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Opozorilo",
   "YEAR": "Leto",
   "YES": "JA",
