--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Playlist Name",
   "PLAYLIST_ADD_DIALOG_BODY": "Select a playlist to add this track",
   "PLAYLIST_ADD_DIALOG_TITLE": "Lägg till spellista",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Här är låtarna i denna spellista",
   "PLAY_NOW": "Spela nu",
   "PREVIOUS": "Föregående",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Låt",
   "TRANSFERS": "Överföringar",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Varning",
   "YEAR": "År",
   "YES": "JA",
