--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Oynatma listesi adı",
   "PLAYLIST_ADD_DIALOG_BODY": "Bu müziği eklemek için herhangi bir oynatma listesi seç",
   "PLAYLIST_ADD_DIALOG_TITLE": "Oynatma listesine ekle",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Listedeki müzikler",
   "PLAY_NOW": "Şimdi oynat",
   "PREVIOUS": "Önceki",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Müzik",
   "TRANSFERS": "Transferler",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "UYARI",
   "YEAR": "Yıl",
   "YES": "EVET",
