--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "播放列表名",
   "PLAYLIST_ADD_DIALOG_BODY": "选择播放列表添加歌曲",
   "PLAYLIST_ADD_DIALOG_TITLE": "添加到播放列表",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "这里展示的是播放列表中的歌曲",
   "PLAY_NOW": "现在播放",
   "PREVIOUS": "Previous",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "歌曲",
   "TRANSFERS": "传输",
   "UNMUTE": "关闭静音",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "警告",
   "YEAR": "发行年份",
   "YES": "是",
