--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -95,6 +95,7 @@
   "PLAYLISTS_TEXT_FIELD_LABEL": "Nom de la playlist",
   "PLAYLIST_ADD_DIALOG_BODY": "Sélectionner une playlist pour y ajouter la piste",
   "PLAYLIST_ADD_DIALOG_TITLE": "Ajouter à la playlist",
+  "PLAYLIST_SINGLE": "Playlist",
   "PLAYLIST_TRACKS_SUBHEADER": "Pistes dans la playlist",
   "PLAY_NOW": "Lire maintenant",
   "PREVIOUS": "Précédent",
@@ -164,6 +165,7 @@
   "TRACK_SINGLE": "Chanson",
   "TRANSFERS": "Transferts",
   "UNMUTE": "Unmute",
+  "VIDEO_SINGLE": "Video",
   "WARNING": "Attention",
   "YEAR": "Année",
   "YES": "Oui",
