add new constant strings

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "Oynatma sırası tapılmadı.\nBurada görmək istədiyin bir oynatma sırasını yarada bilərsən.",
   "N_TRACKS": "N musiqi",
   "OK": "Yaxşı",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Seçimlər",
   "ORDER": "Sıra",
   "PAUSE": "Dayandır",
