--- a/assets/translations/fa_IR.json
+++ b/assets/translations/fa_IR.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "لیست پخشی پیدا نشد.\nلیست پخش بسازید تا آن‌ها را ببینید.",
   "N_TRACKS": "N موسیقی",
   "OK": "اوکی",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "گزینه‌ها",
   "ORDER": "ترتیب",
   "PAUSE": "توقف",
