--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "Aucune playlist trouvée.\nVous pouvez en créer pour les voir ici.",
   "N_TRACKS": "N pistes",
   "OK": "OK",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Options",
   "ORDER": "Order",
   "PAUSE": "Pause",
