--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "プレイリストが見つかりません\n新しくプレイリストを作成してください",
   "N_TRACKS": "N トラック",
   "OK": "OK",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "オプション",
   "ORDER": "Order",
   "PAUSE": "一時停止",
