--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "Nenhuma playlist encontrada.\nCrie alguns para vê-los lá.",
   "N_TRACKS": "N faixas",
   "OK": "OK",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Opções",
   "ORDER": "Pedido",
   "PAUSE": "Pausar",
