--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "Плейлисты не найдены.\nСоздайте плейлист, чтобы увидеть его здесь.",
   "N_TRACKS": "N треков",
   "OK": "ОК",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Параметры",
   "ORDER": "Order",
   "PAUSE": "Пауза",
