--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "Nismo našli seznamov predvajanja.\nUstvari jih, če jih hočeš videti.",
   "N_TRACKS": "N pesmi",
   "OK": "OK",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Opcije",
   "ORDER": "Order",
   "PAUSE": "Pause",
