--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "Oynatma listesi bulunamadı.\nBurada görmek istediğin bir oynatma listesini oluşturabilirsin.",
   "N_TRACKS": "N müzik",
   "OK": "TAMAM",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Seçenekler",
   "ORDER": "Sıra",
   "PAUSE": "Durdur",
