--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "未找到播放列表。\n创建后将会在此显示。",
   "N_TRACKS": "N tracks",
   "OK": "好的",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "选项",
   "ORDER": "Order",
   "PAUSE": "暂停",
