--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
   "OK": "OK",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Safidy",
   "ORDER": "Order",
   "PAUSE": "Pause",
