--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -84,6 +84,7 @@
   "NO_PLAYLISTS_FOUND": "No playlists found.\nCreate some to see them there.",
   "N_TRACKS": "N tracks",
   "OK": "OKAY",
+  "OPEN_IN_BROWSER": "Open in browser",
   "OPTIONS": "Options",
   "ORDER": "Order",
   "PAUSE": "Pause",
