update constant strings

--- a/assets/translations/az_AZ.json
+++ b/assets/translations/az_AZ.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "İnternet bağlantısını yoxla",
   "KNOW_MORE": "Daha çox bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Kolleksiyanda ən az bir qovluq qalmalıdır.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Musiqi dinlənir 💜",
   "LYRICS": "Sözlər",
   "LYRICS_NOT_FOUND": "Söz tapılmadı.",
   "LYRICS_RETRIEVING": "Sözlər getirilir...",
   "MENU": "Menyu",
+  "MORE": "MORE",
   "MUTE": "Səssiz",
   "M_TRACKS_AND_N_ALBUMS": "M Müusiqi ilə N Albom",
   "NEXT": "Növbəti",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "\"QUERY\" üçün nəticələr",
   "RETRIEVING_INFO": "Bilgilər gətirilir...",
   "RETRIEVING_LINK": "Bağlantı gətirilir...",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Yüklənənlərə qeyd et",
   "SEARCH": "Axtar",
   "SEARCH_COLLECTION": "Kolleksiya axtar",
