--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Check your internet connection.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Lyrics",
   "LYRICS_NOT_FOUND": "Lyrics not found.",
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MENU": "Menu",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Retrieving info",
   "RETRIEVING_LINK": "Retrieving stream",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Save to downloads",
   "SEARCH": "Search",
   "SEARCH_COLLECTION": "Search collection",
