--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Aucune connexion Internet",
   "KNOW_MORE": "En savoir plus",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Un répertoire au moins doit être présent dans votre collection.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "En écoute 💜",
   "LYRICS": "Paroles",
   "LYRICS_NOT_FOUND": "Paroles non trouvées",
   "LYRICS_RETRIEVING": "Récupération des paroles...",
   "MENU": "Menu",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pistes & N albums",
   "NEXT": "Suivant",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Résultats pour la requête \"QUERY\"",
   "RETRIEVING_INFO": "Récupération d'informations",
   "RETRIEVING_LINK": "Récupération du flux",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Enregistrer dans les téléchargements",
   "SEARCH": "Recherche",
   "SEARCH_COLLECTION": "Recherche d'une collection",
