--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "अपना इंटरनेट कनेक्शन चेक करें।",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "आपके कलेक्शन में कम से कम एक फ़ोल्डर रहने की आवश्यकता है।",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "गाने के बोल",
   "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
   "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
   "MENU": "मेन्यू",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "जानकारी पुनः प्राप्त कि जा रही है",
   "RETRIEVING_LINK": "स्ट्रीम पुनः प्राप्त कि जा रही है",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "डौन्लोडस में सेव करें",
   "SEARCH": "खोज़े",
   "SEARCH_COLLECTION": "कलेक्शन में ढूंढें",
