--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "インターネット接続を確認してください。",
   "KNOW_MORE": "もっと見る",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "コレクションには1つ以上のフォルダを残しておく必要があります。",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "音楽を聴く 💜",
   "LYRICS": "歌詞",
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を受信中...",
   "MENU": "メニュー",
+  "MORE": "MORE",
   "MUTE": "ミュート",
   "M_TRACKS_AND_N_ALBUMS": "M トラック & N アルバム",
   "NEXT": "次へ",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "\"QUERY\" の検索結果",
   "RETRIEVING_INFO": "情報を取得中",
   "RETRIEVING_LINK": "ストリームを取得中",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "ダウンロードに保存",
   "SEARCH": "検索",
   "SEARCH_COLLECTION": "コレクションを検索",
