--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Hamarino ny fifandraisana Internet anao.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Farafahakeliny rakitra iray tsy maintsy mijanona ao amin'ny fanangonana.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Tonon-kira",
   "LYRICS_NOT_FOUND": "Tsy hita ilay tonon-kira.",
   "LYRICS_RETRIEVING": "Famerenana tonon-kira ...",
   "MENU": "Menu",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Recuperation d'info",
   "RETRIEVING_LINK": "Recuperation stream",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Tehirizo amin'ny fisintomana",
   "SEARCH": "Fikarohana",
   "SEARCH_COLLECTION": "Fanangonana fikarohana",
