--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Controleer uw internet verbinding...",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Er moet ten minste één map in uw collectie blijven.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Songteksten",
   "LYRICS_NOT_FOUND": "Songteksten niet gevonden.",
   "LYRICS_RETRIEVING": "Songteksten ophalen...",
   "MENU": "Menu",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Info ophalen",
   "RETRIEVING_LINK": "Stream ophalen",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Sla op in downloads",
   "SEARCH": "Zoeken",
   "SEARCH_COLLECTION": "Zoek Collectie",
