--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Verifique sua conexão com a internet...",
   "KNOW_MORE": "SABER MAIS",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Pelo menos uma pasta precisa permanecer em sua coleção.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Ouvindo música 💜",
   "LYRICS": "Letras",
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MENU": "Menu",
+  "MORE": "MORE",
   "MUTE": "Mudo",
   "M_TRACKS_AND_N_ALBUMS": "M faixas & N albums",
   "NEXT": "Próxima",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Resultados para \"QUERY\"",
   "RETRIEVING_INFO": "Recuperação de informação",
   "RETRIEVING_LINK": "Recuperando fluxo",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Salvar nos downloads",
   "SEARCH": "Procurar",
   "SEARCH_COLLECTION": "Procurar Coleção",
