--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Проверьте интернет-соединение.",
   "KNOW_MORE": "УЗНАТЬ БОЛЬШЕ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Оставьте хотя бы одну папку.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Слушает музыку 💜",
   "LYRICS": "Текст",
   "LYRICS_NOT_FOUND": "Текст не найден.",
   "LYRICS_RETRIEVING": "Получение...",
   "MENU": "Меню",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M треков & N альбомов",
   "NEXT": "ДАЛЬШЕ",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Результаты по запросу \"QUERY\"",
   "RETRIEVING_INFO": "Получение информации",
   "RETRIEVING_LINK": "Получение ссылки",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Сохранить в \"Downloads\"",
   "SEARCH": "Поиск",
   "SEARCH_COLLECTION": "Поиск по коллекции",
