--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Prosimo, preverite vašo internetno povezavo",
   "KNOW_MORE": "POGLEJ VEČ",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Vsaj en direktorij mora ostati v tvoji zbirki.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Posluša glasbo 💜",
   "LYRICS": "Besedilo pesmi",
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MENU": "Meni",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M pesmi & N albumov",
   "NEXT": "Next",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Zadetki za \"QUERY\"",
   "RETRIEVING_INFO": "Pridobivanje informacij o pesmi",
   "RETRIEVING_LINK": "Pridobivanje toka pesmi",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Shrani med prenose",
   "SEARCH": "Išči",
   "SEARCH_COLLECTION": "Preišči kolekcijo",
