--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Granska din internetanslutning.",
   "KNOW_MORE": "VET MER",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Minst en mapp bör finnas i din samling.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Lyssnar på musik 💜",
   "LYRICS": "Låttexter",
   "LYRICS_NOT_FOUND": "Låttexter inte funna.",
   "LYRICS_RETRIEVING": "Hämtar låttexter...",
   "MENU": "Meny",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M låtar & N album",
   "NEXT": "Nästa",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Resultat för \"QUERY\"",
   "RETRIEVING_INFO": "Hämtar info",
   "RETRIEVING_LINK": "Hämtar stream",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Spara i nerladdningar",
   "SEARCH": "Sök",
   "SEARCH_COLLECTION": "Sök samling",
