--- a/assets/translations/tr_TR.json
+++ b/assets/translations/tr_TR.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "İnternet bağlantını kontrol et",
   "KNOW_MORE": "Daha fazla bilgi",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Koleksiyonunda en az bir klasör kalmalıdır.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Müzik dinleniyor 💜",
   "LYRICS": "Sözler",
   "LYRICS_NOT_FOUND": "Söz bulunamadı.",
   "LYRICS_RETRIEVING": "Sözler getiriliyor...",
   "MENU": "Menü",
+  "MORE": "MORE",
   "MUTE": "Sessiz",
   "M_TRACKS_AND_N_ALBUMS": "M Müzik ile N Albüm",
   "NEXT": "Sonraki",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "\"QUERY\" için sonuçlar",
   "RETRIEVING_INFO": "Bilgiler getiriliyor...",
   "RETRIEVING_LINK": "Bağlantı getiriliyor...",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "İndirilenlere kaydet",
   "SEARCH": "Ara",
   "SEARCH_COLLECTION": "Koleksiyon ara",
