--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "检查您的网络连接。",
   "KNOW_MORE": "了解更多",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "您的收藏中需要只是包括一个目录。",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "歌词",
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MENU": "菜单",
+  "MORE": "MORE",
   "MUTE": "切换静音",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "下一个",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "获取详情中",
   "RETRIEVING_LINK": "获取串流中",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "保存到下载列表",
   "SEARCH": "搜索",
   "SEARCH_COLLECTION": "搜索收藏夹",
