--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -61,11 +61,13 @@
   "INTERNET_ERROR": "Nincs internetelérés.",
   "KNOW_MORE": "KNOW MORE",
   "LAST_COLLECTION_DIRECTORY_REMOVED": "Atleast one folder needs to stay in your collection.",
+  "LESS": "LESS",
   "LISTENING_TO_MUSIC": "Listening to music 💜",
   "LYRICS": "Énekszöveg",
   "LYRICS_NOT_FOUND": "Nem található énekszöveg.",
   "LYRICS_RETRIEVING": "Énekszöveg betöltése...",
   "MENU": "Menü",
+  "MORE": "MORE",
   "MUTE": "Mute",
   "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NEXT": "Next",
@@ -109,6 +111,7 @@
   "RESULTS_FOR_QUERY": "Results for \"QUERY\"",
   "RETRIEVING_INFO": "Azonosítás...",
   "RETRIEVING_LINK": "Adatfolyam betöltése...",
+  "SAVE_AS_PLAYLIST": "Save as playlist",
   "SAVE_TO_DOWNLOADS": "Mentés a letöltések közé",
   "SEARCH": "Keresés",
   "SEARCH_COLLECTION": "Keresés a gyűjteményben",
